--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,17 @@ html
     #app!= content
 
   script(src='http://localhost:8080/js/app.js', defer)
-  link(href='priceminister.css', rel='stylesheet')
-  link(href='style.css', rel='stylesheet')
   link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous")
+  | <style type='text/css'>
+  include css/priceminister.css
+  include css/style.css
+  include css/slick-theme.css
+  include css/mfb.css
+  include css/slick.css
+  | </style>
+  script
+    include js/jquery-2.1.1.js
+    include js/bootstrap.min.js
+    include js/typeahead.js
+    include js/mfb.js
+    include js/slick.min.js
