--- a/views/index.jade
+++ b/views/index.jade
@@ -13,14 +13,11 @@ html
 
   script(src='http://localhost:8080/js/app.js', defer)
   link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous")
+
   | <style type='text/css'>
   include css/priceminister.css
   include css/style.css
   include css/slick-theme.css
   include css/slick.css
+  include css/mfb.css
   | </style>
-  script
-    include js/jquery-2.1.1.js
-    include js/bootstrap.min.js
-    include js/typeahead.js
-    include js/slick.min.js
