changing app name & fix price error

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 html
   head
-    title="React Isomorphic App"
+    title="PriceMinister MDC"
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
 
