--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 html
   head
-    title="PriceMinister MDC"
+    title="React Isomorphic App"
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
 
@@ -12,12 +12,18 @@ html
     #app!= content
 
   script(src='http://localhost:8080/js/app.js', defer)
+
   link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous")
 
   | <style type='text/css'>
   include css/priceminister.css
   include css/style.css
-  include css/slick-theme.css
   include css/slick.css
+  include css/slick-theme.css
   include css/mfb.css
   | </style>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
